[gd_scene load_steps=7 format=3 uid="uid://s0kdonfloem4"]

[ext_resource type="Texture2D" uid="uid://82avrm5tlbsx" path="res://Pedjuang Nusantara Assets/background/bg_pantai.png" id="1_0ianw"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_k7ain"]
[ext_resource type="Texture2D" uid="uid://gss6snhbxnq" path="res://Pedjuang Nusantara Assets/background/bg_riflebambu.png" id="3_isi2o"]
[ext_resource type="Theme" uid="uid://beaad0i4tphtk" path="res://main_menu.tres" id="3_k3ink"]
[ext_resource type="Texture2D" uid="uid://dqo6pvgiqdsq" path="res://Pedjuang Nusantara Assets/background/bg_title.png" id="4_sfap7"]
[ext_resource type="AudioStream" uid="uid://bealr3ah8kvyo" path="res://Pedjuang Nusantara Assets/sfx/heroic-intro-21468.mp3" id="6_o0p1i"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_k7ain")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BgPantai" type="Sprite2D" parent="CanvasLayer/BoxContainer"]
position = Vector2(640.5, 359.269)
scale = Vector2(0.666146, 0.666169)
texture = ExtResource("1_0ianw")
metadata/c = Color(0.305882, 0.627451, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BoxContainer/BgPantai"]
custom_minimum_size = Vector2(0, 20)
offset_left = -940.469
offset_top = -296.463
offset_right = -836.469
offset_bottom = -125.463
scale = Vector2(4, 4)
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 1

[node name="NewGame" type="Button" parent="CanvasLayer/BoxContainer/BgPantai/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3ink")
text = "New Game"

[node name="Choose Stage" type="Button" parent="CanvasLayer/BoxContainer/BgPantai/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3ink")
text = "Choose Stage"
metadata/z = Color(0.633042, 0.353796, 0.0672246, 1)

[node name="Settings" type="Button" parent="CanvasLayer/BoxContainer/BgPantai/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3ink")
text = "Settings"

[node name="Credits" type="Button" parent="CanvasLayer/BoxContainer/BgPantai/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3ink")
text = "Credits"

[node name="ExitGame" type="Button" parent="CanvasLayer/BoxContainer/BgPantai/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3ink")
text = "Exit Game"

[node name="BgRiflebambu" type="Sprite2D" parent="CanvasLayer/BoxContainer"]
position = Vector2(1076, 435)
scale = Vector2(0.502792, 0.542939)
texture = ExtResource("3_isi2o")

[node name="BgTitle" type="Sprite2D" parent="CanvasLayer/BoxContainer"]
position = Vector2(197, 108)
scale = Vector2(0.684932, 0.799252)
texture = ExtResource("4_sfap7")

[node name="Backsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_o0p1i")
autoplay = true
bus = &"Backsound"

[connection signal="pressed" from="CanvasLayer/BoxContainer/BgPantai/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/BgPantai/VBoxContainer/Choose Stage" to="." method="_on_choose_stage_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/BgPantai/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/BgPantai/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/BgPantai/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
